--- a/style.css
+++ b/style.css
@@ -40,7 +40,8 @@ body{
 }
 #come_center{
     display: flex;
-    margin:200px auto;
+    width:100%;
+    height:100vh;
     justify-content: center;
     align-items: center;
 }
